Added dictionary figures and added some new papers to transcription.bib

--- a/paper/transcription.bib
+++ b/paper/transcription.bib
@@ -1,3 +1,12 @@
+@inproceedings{weninger2013discriminative,
+  title={A discriminative approach to polyphonic piano note transcription using supervised non-negative matrix factorization},
+  author={Weninger, Felix and Kirst, Christian and Schuller, Bjorn and Bungartz, Hans-Joachim},
+  booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
+  pages={6--10},
+  year={2013},
+  organization={IEEE}
+}
+
 @article{hoffman2012stochastic,
   title={Stochastic variational inference},
   author={Hoffman, Matt and Blei, David M and Wang, Chong and Paisley, John},
@@ -60,6 +69,15 @@
   publisher={IEEE}
 }
 
+@inproceedings{boogaart2009note,
+  title={Note onset detection for the transcription of polyphonic piano music},
+  author={Boogaart, CGvd and Lienhart, Rainer},
+  booktitle={Multimedia and Expo, 2009. ICME 2009. IEEE International Conference on},
+  pages={446--449},
+  year={2009},
+  organization={IEEE}
+}
+
 @article{fevotte2009nonnegative,
   title={Nonnegative matrix factorization with the itakura-saito divergence: With application to music analysis},
   author={F{\'e}votte, C{\'e}dric and Bertin, Nancy and Durrieu, Jean-Louis},
@@ -118,7 +136,6 @@
   publisher={Taylor \& Francis}
 }
 
-
 @inproceedings{smaragdis2003non,
   title={Non-negative matrix factorization for polyphonic music transcription},
   author={Smaragdis, Paris and Brown, Judith C},
@@ -126,6 +143,16 @@
   pages={177--180},
   year={2003},
   organization={IEEE}
+}
+
+@article{bank2003physically,
+  title={Physically informed signal processing methods for piano sound synthesis: a research overview},
+  author={Bank, Bal{\'a}zs and Avanzini, Federico and Borin, Gianpaolo and De Poli, Giovanni and Fontana, Federico and Rocchesso, Davide},
+  journal={EURASIP Journal on Applied Signal Processing},
+  volume={2003},
+  pages={941--952},
+  year={2003},
+  publisher={Hindawi Publishing Corp.}
 }
 
 @article{seung2001algorithms,
